--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-# Dependencies
-node_modules/
+# Dependencies - Ignore in root, client, and server folders
+/node_modules
+/client/node_modules
+/server/node_modules
 
-# npm debug logs
+# Build output from Vite
+/client/dist
+
+# Environment files
+.env
+.env.*
+
+# OS files & logs
+.DS_Store
+*.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-
-# Environment variables files
-.env
-.env.*.local
-
-# OS files and others
-.DS_Store
-*.local
-dist
