feat: Add root entry point for Azure deployment

--- a/server/web.config
+++ b/server/web.config
@@ -1,69 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <webSocket enabled="false" />
     <handlers>
-      <add name="iisnode" path="server/index.js" verb="*" modules="iisnode" />
-    </handlers>
-
-    <rewrite>
-      <rules>
-        <rule name="ReactRoutes" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-            <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="server/dist/index.html" />
-        </rule>
-        
-        <rule name="Nodejs">
-          <match url=".*" />
-          <action type="Rewrite" url="server/index.js" />
-        </rule>
-      </rules>
-    </rewrite>
-
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <add segment="node_modules" />
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
-
-  </system.webServer>
-</configuration><?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <system.webServer>
-    <webSocket enabled="false" />
-    <handlers>
-      <add name="iisnode" path="server/index.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
-        <rule name="ReactRoutes" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-            <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="server/dist/index.html" />
-        </rule>
         <rule name="Nodejs">
-          <match url=".*" />
-          <action type="Rewrite" url="server/index.js" />
+          <match url="/*" />
+          <action type="Rewrite" url="app.js"/>
         </rule>
       </rules>
     </rewrite>
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <add segment="node_modules" />
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
+    
+    <iisnode watchedFiles="web.config;*.js;server/**/*.js"/>
+    
   </system.webServer>
 </configuration>
