--- a/.github/workflows/main_ai-course-generator.yml
+++ b/.github/workflows/main_ai-course-generator.yml
@@ -23,13 +23,13 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
       # --- THIS IS THE CORRECTED STEP ---
+      - name: Install dependencies and build client
+        run: |
+          npm install --prefix server
+          npm install --prefix client
+          npm run build --prefix client
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
