--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node app.js",
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
     "install": "npm run install-server && npm run install-client",
     "build": "npm run build --prefix client"
-  }
-,
+  },
   "dependencies": {
     "sequelize": "^6.37.7",
     "tedious": "^18.6.1"
