changed .yml file again-3

--- a/.github/workflows/main_ai-course-generator.yml
+++ b/.github/workflows/main_ai-course-generator.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - AI-COURSE-GENERATOR
 
 on:
@@ -11,9 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
+    runs-on: ubuntu-latest # Switched to Linux for a more stable build
 
     steps:
       - uses: actions/checkout@v4
@@ -23,8 +18,6 @@ jobs:
         with:
           node-version: '20.x'
 
-      # --- THIS IS THE CORRECTED STEP ---
-      # It now uses the scripts from your root package.json
       - name: Install dependencies and build
         run: |
           npm install
