--- a/web.config
+++ b/web.config
@@ -2,13 +2,13 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="app.mjs" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
         <rule name="Nodejs">
           <match url="/*" />
-          <action type="Rewrite" url="app.js"/>
+          <action type="Rewrite" url="app.mjs"/>
         </rule>
       </rules>
     </rewrite>
