--- a/.github/workflows/main_ai-course-generator.yml
+++ b/.github/workflows/main_ai-course-generator.yml
@@ -8,23 +8,21 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Use Linux for a more stable build environment
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: Install dependencies and build client
+      - name: Install dependencies and build
         run: |
-          npm install --prefix server
-          npm install --prefix client
-          npm run build --prefix client
-      
+          npm run install
+          npm run build
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -38,13 +36,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
