--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "course-generator-app",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-     "start": "node server/index.js",
-    "install-server": "npm install --prefix server",
-    "install-client": "npm install --prefix client",
-    "install": "npm run install-server && npm run install-client",
-    "build": "npm run build --prefix client"
+   "scripts": {
+    "start": "node server/index.js",
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
+
   "dependencies": {
+    "sequelize": "^6.37.7",
+    "tedious": "^18.6.1",
+    "@google/genai": "^1.12.0",
+    "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0",
+    "mssql": "^11.0.1",
+    "mysql2": "^3.14.3",
     "sequelize": "^6.37.7",
     "tedious": "^18.6.1"
   }
