--- a/server/package.json
+++ b/server/package.json
@@ -1,33 +1,22 @@
 {
-  "name": "server",
+  "name": "course-generator-app",
   "version": "1.0.0",
-  "main": "index.js",
-"scripts": {
-  "start": "node index.js",
-  "server": "nodemon index.js",
-  "build": "cd ../client && npm run build"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module",
-  "description": "",
+  "scripts": {
+    "start": "node server/index.js",
+    "build": "npm install --prefix client && npm run build --prefix client"
+  },
   "dependencies": {
-    "@google/genai": "^1.12.0",
     "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "mssql": "^11.0.1",
     "mysql2": "^3.14.3",
     "sequelize": "^6.37.7",
     "tedious": "^18.6.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
